--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
+    "redis-mock": "^0.47.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.4"
   },
