update build config

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prepare": "npm run build",
-    "lint": "eslint --ext .js --ext .ts ./src ./test",
-    "test": "jest --forceExit --coverage --verbose",
+    "lint": "eslint --ext .js --ext .ts ./src",
+    "test": "jest --forceExit --coverage --verbose ./src",
     "build": "tsc",
     "watch": "tsc -w"
   },
