--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
   "name": "@fastcampus/fastbus",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "fast and simple pubsub using redis",
   "url": "https://github.com/fastcampusgit/fastbus",
   "repository": "https://github.com/fastcampusgit/fastbus",
-  "main": "index.js",
+  "author": "iolo@fastcampus.co.kr",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.js",
   "scripts": {
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
     "lint": "eslint --ext .js --ext .ts ./src",
     "test": "jest --forceExit --coverage --verbose ./src",
     "build": "tsc",
     "watch": "tsc -w"
   },
-  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.22",
+    "@types/node": "^14.0.23",
     "@types/redis": "^2.8.25",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
     "redis-mock": "^0.49.0",
-    "ts-jest": "^26.1.1",
+    "ts-jest": "^26.1.2",
     "typescript": "^3.9.6"
   },
   "dependencies": {
