--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastcampus/fastbus",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "fast and simple pubsub using redis",
   "url": "https://github.com/fastcampusgit/fastbus",
   "repository": "https://github.com/fastcampusgit/fastbus",
@@ -10,25 +10,25 @@
   "types": "dist/index.d.js",
   "scripts": {
     "prepublishOnly": "npm run build",
-    "lint": "eslint --ext .js --ext .ts ./src",
+    "pretest": "eslint --ext .js --ext .ts ./src",
     "test": "jest --forceExit --coverage --verbose ./src",
     "build": "tsc",
-    "watch": "tsc -w"
+    "start": "tsc -w"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.23",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
     "@types/redis": "^2.8.25",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.1.0",
+    "jest": "^26.4.1",
     "prettier": "^2.0.5",
-    "redis-mock": "^0.49.0",
-    "ts-jest": "^26.1.2",
-    "typescript": "^3.9.6"
+    "redis-mock": "^0.51.0",
+    "ts-jest": "^26.2.0",
+    "typescript": "^4.0.2"
   },
   "dependencies": {
     "redis": "^3.0.2"
