--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastcampus/fastbus",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "fast and simple pubsub using redis",
   "url": "https://github.com/fastcampusgit/fastbus",
   "repository": "https://github.com/fastcampusgit/fastbus",
@@ -10,26 +10,28 @@
   "types": "dist/index.d.js",
   "scripts": {
     "prepublishOnly": "npm run build",
-    "pretest": "eslint --ext .js --ext .ts ./src",
-    "test": "jest --forceExit --coverage --verbose ./src",
+    "pretest": "npm run lint",
+    "prebuild": "npm run lint",
+    "lint": "eslint --ext .js --ext .ts ./src",
+    "test": "jest --forceExit --detectOpenHandles --coverage --verbose ./src",
     "ci:test": "./ci_test.sh",
     "build": "tsc",
     "start": "tsc -w"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@types/redis": "^2.8.27",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/redis": "^2.8.28",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "jest": "^26.6.1",
     "prettier": "^2.1.2",
-    "redis-mock": "^0.52.0",
-    "ts-jest": "^26.4.0",
-    "typescript": "^4.0.3"
+    "redis-mock": "^0.53.0",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "redis": "^3.0.2"
