cleanup github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: FastBus CI
+name: ci
 
 on:
   push:
@@ -7,34 +7,31 @@ on:
   pull_request:
     branches:
       - develop
-      - master
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
 
     strategy:
       matrix:
         node-version: [14.x]
+
     services:
       redis:
         image: redis
         ports:
-        - 6379:6379
+          - 6379:6379
         options: --entrypoint redis-server
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Bootstrap
-        run: |
-          npm i 
-      - name: Begin Test
-        run: |
-          npm run ci:test
+      - run: npm ci
+      - run: npm run ci:test
         env:
           NODE_ENV: test
           CI: true
