change fastcampusgit into fastcampus LOL

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@fastcampus/fastbus",
   "version": "0.1.5",
   "description": "fast and simple pubsub using redis",
-  "url": "https://github.com/fastcampusgit/fastbus",
-  "repository": "https://github.com/fastcampusgit/fastbus",
+  "url": "https://github.com/fastcampus/fastbus",
+  "repository": "https://github.com/fastcampus/fastbus",
   "author": "iolo@fastcampus.co.kr",
   "license": "MIT",
   "main": "dist/index.js",
