--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fastcampus/fastbus",
-  "version": "0.1.5",
-  "description": "fast and simple pubsub using redis",
+  "version": "0.1.6",
+  "description": "fast and simple pub/sub using redis",
   "url": "https://github.com/fastcampus/fastbus",
   "repository": "https://github.com/fastcampus/fastbus",
   "author": "iolo@fastcampus.co.kr",
@@ -34,6 +34,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "redis": "^3.0.2"
+    "redis": "^3.1.2"
   }
 }
