--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@fastcampus/fastbus",
-  "version": "0.1.6",
+  "name": "@day1co/fastbus",
+  "version": "3.0.0",
   "description": "fast and simple pub/sub using redis",
   "url": "https://github.com/fastcampus/fastbus",
   "repository": "https://github.com/fastcampus/fastbus",
@@ -19,19 +19,20 @@
     "start": "tsc -w"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.1",
+    "@tsconfig/node16": "^1.0.2",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.17",
     "@types/redis": "^2.8.32",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.2",
-    "prettier": "^2.4.1",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
     "redis-mock": "^0.56.3",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "redis": "^3.1.2"
