--- a/package.json
+++ b/package.json
@@ -20,21 +20,19 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/ioredis": "^4.28.8",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.17",
-    "@types/redis": "=2.8.32",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "ioredis": "^4.28.5",
+    "ioredis-mock": "^7.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "redis-mock": "^0.56.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "redis": "=3.1.2"
   }
 }
