--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "@google-cloud/pubsub": "^2.18.4"
   }
 }
