--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,10 @@ services:
     image: redis:4-alpine
     ports:
       - '6379:6379'
+  pubsub:
+    image: google/cloud-sdk:emulators
+    ports:
+      - '8085:8085'
+    environment:
+      - INSTALL_COMPONENTS=google-cloud-sdk-pubsub-emulator
+    entrypoint: gcloud beta emulators pubsub start --host-port=0.0.0.0:8085
