--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ioredis": "^4.28.5",
     "ioredis-mock": "^7.0.0",
     "jest": "^27.5.1",
+    "pino": "^7.7.0",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
