--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "ioredis": "^4.28.5",
     "ioredis-mock": "^7.0.0",
     "jest": "^27.5.1",
     "pino": "^7.7.0",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "ioredis": "^4.28.5",
     "@google-cloud/pubsub": "^2.18.4"
   }
 }
