--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,7 +11,6 @@ on:
       - src/**/*.spec.ts
       - .github/**/*
 
-
 defaults:
   run:
     working-directory: ./
@@ -32,8 +31,7 @@ jobs:
     steps:
       - run: |
           PUSH_TOKEN_OWNER=`gh api user | jq -r .login`
-          echo "::set-output name=PUSH_TOKEN_OWNER::$PUSH_TOKEN_OWNER"
-
+          echo "PUSH_TOKEN_OWNER=$PUSH_TOKEN_OWNER" >> $GITHUB_OUTPUT
           echo "PUSH_TOKEN_OWNER is $PUSH_TOKEN_OWNER"
           echo "PUSHER is $PUSHER"
         id: push-token-owner
@@ -55,7 +53,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 1
-      - uses: 8BitJonny/gh-get-current-pr@1.1.0
+      - uses: 8BitJonny/gh-get-current-pr@2.2.0
         id: PR
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -75,8 +73,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
-          cache: 'npm'
+          node-version: '18'
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@day1co'
@@ -87,7 +84,7 @@ jobs:
         # GNU grep의 exit 코드에 따른 Github Actions의 Fail 방지를 위해 무조건 true를 리턴하게 함.
         run: |
           VERSION_CHANGED=$(git diff ${{ github.event.before }}..${{ github.event.after }} package.json | (grep -c -E "^\+\s+\"version\"" || true) )
-          echo "::set-output name=version_changed::$VERSION_CHANGED"
+          echo "version_changed=$VERSION_CHANGED" >> $GITHUB_OUTPUT
 
       - name: npm version patch when versionChanged eq 0
         if: ${{ steps.version-changed.outputs.version_changed == 0 }}
