--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "types": "lib/index.d.js",
   "scripts": {
     "build": "tsc",
-    "clean": "npm-run-all clean:build clean:test clean:module",
+    "clean": "npm-run-all -p clean:build clean:test clean:module",
     "clean:build": "rimraf ./lib",
     "clean:module": "rimraf ./node_modules",
     "clean:test": "rimraf ./coverage",
     "lint": "eslint --ext .js --ext .ts ./src",
-    "prebuild": "npm-run-all clean:build lint",
+    "prebuild": "npm-run-all -s clean:build lint",
     "prepublishOnly": "npm run build",
-    "pretest": "npm-run-all clean:test lint",
+    "pretest": "npm-run-all -s clean:test lint",
     "serve": "echo no serve",
     "start": "npm run serve",
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose ./src",
@@ -25,9 +25,9 @@
     "watch": "tsc -w"
   },
   "devDependencies": {
-    "@day1co/eslint-config": "^0.0.1",
-    "@day1co/prettier-config": "^0.0.1",
-    "@day1co/tsconfig": "^1.1.3",
+    "@day1co/eslint-config": "^1.0.1",
+    "@day1co/prettier-config": "^1.0.0",
+    "@day1co/tsconfig": "^1.2.1",
     "@tsconfig/node-lts": "^18.12.1",
     "@types/ioredis": "^4.28.10",
     "@types/ioredis-mock": "^8.2.1",
